cambios a package.json para ejecucion en aws

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ JWT_SECRET=ugh!holachanc3
 SERVER_PORT=3001
 
 #dabase variables
-DB_ENDPOINT=localhost
+DB_ENDPOINT=mongodb+srv://AlonsoChamp:MagicAlonso@cluster0.hcorp.mongodb.net/f1?retryWrites=true&w=majority
 DB_PORT=27017
 #true for debug, anything else will not debug
 DB_DEBUG=true
