--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 JWT_SECRET=ugh!holachanc3
 #server variables  - chance falta tambien secreto para sesiones
-SERVER_PORT=3000
+PORT=3000
 
 #dabase variables
 DB_ENDPOINT=mongodb+srv://AlonsoChamp:MagicAlonso@cluster0.hcorp.mongodb.net/f1?retryWrites=true&w=majority
