--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@types/express-session": "^1.17.4",
     "argon2": "^0.28.5",
+    "axios": "^0.27.2",
+    "cheerio": "^1.0.0-rc.11",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "debug": "^4.3.4",
