--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/express-session": "^1.17.4",
+    "@types/nodemailer": "^6.4.4",
     "argon2": "^0.28.5",
     "axios": "^0.27.2",
     "cheerio": "^1.0.0-rc.11",
@@ -26,6 +27,7 @@
     "express-winston": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.0",
+    "nodemailer": "^6.7.5",
     "shortid": "^2.2.16",
     "typescript": "^4.6.3",
     "winston": "^3.7.2"
