--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/express-session": "^1.17.4",
+    "@types/mongoose": "^5.11.97",
     "@types/nodemailer": "^6.4.4",
     "argon2": "^0.28.5",
     "axios": "^0.27.2",
@@ -26,10 +27,9 @@
     "express-validator": "^6.14.0",
     "express-winston": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.3.0",
+    "mongoose": "^6.5.4",
     "nodemailer": "^6.7.5",
     "shortid": "^2.2.16",
-    "typescript": "^4.6.3",
     "winston": "^3.7.2"
   },
   "devDependencies": {
@@ -41,6 +41,6 @@
     "@types/shortid": "^0.0.29",
     "source-map-support": "^0.5.21",
     "tslint": "^6.1.3",
-    "typescript": "^4.6.3"
+    "typescript": "^4.8.2"
   }
 }
