--- a/.env
+++ b/.env
@@ -1,15 +1,15 @@
 JWT_SECRET=ugh!holachanc3
 #server variables  - AWS deploy
-PORT=3000
+#PORT=3000
 #server variables local
-#PORT=3001
+PORT=3001
 
 #dabase variables AWS deploy
 
-DB_ENDPOINT=mongodb+srv://AlonsoChamp:MagicAlonso@cluster0.hcorp.mongodb.net/f1?retryWrites=true&w=majority
+#DB_ENDPOINT=mongodb+srv://AlonsoChamp:MagicAlonso@cluster0.hcorp.mongodb.net/f1?retryWrites=true&w=majority
 #dabase variables local
-#DB_ENDPOINT=mongodb://localhost:27017/f1
+DB_ENDPOINT=mongodb://localhost:27017/f1
 
-DB_PORT=27017
+#DB_PORT=27017
 #true for debug, anything else will not debug
 DB_DEBUG=true
