--- a/.platform/nginx/conf.d/https_custom.conf
+++ b/.platform/nginx/conf.d/https_custom.conf
@@ -7,7 +7,7 @@ upstream nodejs {
 server {
 
     listen 80 default_server;
-    server_name localhost;
+    server_name f1api.cartribute.com;
     access_log    /var/log/nginx/access.log main;
     return 301 https://$host$request_uri;
 
