--- a/.platform/nginx/conf.d/https_custom.conf
+++ b/.platform/nginx/conf.d/https_custom.conf
@@ -19,7 +19,7 @@ server {
 # HTTPS server
 server {
     listen       443 default ssl;
-    server_name  localhost;
+    server_name  f1api.cartribute.com;
     error_page 497 https://$host$request_uri;
 
     if ($time_iso8601 ~ "^(\d{4})-(\d{2})-(\d{2})T(\d{2})") {
